--- a/configs/mainConfig.json
+++ b/configs/mainConfig.json
@@ -3,6 +3,6 @@
   "prefix": "ipo!",
   "mongoURI": "mongodb+srv://adminn:GVrvlr9jNqPULeMe@mesarp.q6squ.mongodb.net/ipoMain?retryWrites=true&w=majority",
   "owner": ["712258317941997591","694552600707858473"],
-  "buildname": "STABLE",
-  "buildversion": "0.0.1"
+  "buildname": "BETA_STABLE",
+  "buildversion": "1.0.0"
 }
